ask about gamma format

--- a/ms2ldaviz/notebooks/TEMP_NOTEBOOK.ipynb
+++ b/ms2ldaviz/notebooks/TEMP_NOTEBOOK.ipynb
@@ -82,6 +82,31 @@
     "    dm2m = DocumentMass2Motif.objects.filter(document=document, probability__gte=doc_m2m_prob_threshold,\n",
     "                                             overlap_score__gte=doc_m2m_overlap_threshold).order_by('-probability')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<QuerySet [<DocumentMass2Motif: 0.925464030967>]>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_m2m_prob_threshold = 0.05\n",
+    "doc_m2m_overlap_threshold = 0.0\n",
+    "chosen_document = 270414\n",
+    "m2m = DocumentMass2Motif.objects.filter(document=chosen_document, probability__gte=doc_m2m_prob_threshold,\n",
+    "                                             overlap_score__gte=doc_m2m_overlap_threshold).order_by('-probability')\n",
+    "m2m"
+   ]
   }
  ],
  "metadata": {
