--- a/ms2ldaviz/notebooks/TEMP_NOTEBOOK.ipynb
+++ b/ms2ldaviz/notebooks/TEMP_NOTEBOOK.ipynb
@@ -107,6 +107,34 @@
     "                                             overlap_score__gte=doc_m2m_overlap_threshold).order_by('-probability')\n",
     "m2m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEDIA_ROOT is C:\\Users\\rpetr\\OneDrive\\Desktop\\DISS_CODE\\ms2ldaviz\\ms2ldaviz\\media\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'unique_topics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-4c739c5520eb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0munique_topics\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'unique_topics' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "unique_topics"
+   ]
   }
  ],
  "metadata": {
