--- a/ms2ldaviz/notebooks/PROTOTYPE01.ipynb
+++ b/ms2ldaviz/notebooks/PROTOTYPE01.ipynb
@@ -37,7 +37,8 @@
     "import pylab as plt\n",
     "import csv\n",
     "from scipy.special import polygamma as pg\n",
-    "from scipy.special import psi as psi"
+    "from scipy.special import psi as psi\n",
+    "import time"
    ]
   },
   {
@@ -56,7 +57,8 @@
     "# Choose experiment ID manually from database. Small number is used for normalisation and e-step below. \n",
     "experiment_id=190 \n",
     "experiment = Experiment.objects.get(id=experiment_id)\n",
-    "SMALL_NUMBER = 1e-100"
+    "SMALL_NUMBER = 1e-100\n",
+    "TIME=[]"
    ]
   },
   {
@@ -73,6 +75,7 @@
    "outputs": [],
    "source": [
     "# Get all words/features in the database relevant for the experiment. \n",
+    "time\n",
     "features = Feature.objects.filter(experiment_id=experiment)\n",
     "experiment_words = []\n",
     "for f in features:\n",
