final commit before submission

--- a/ms2ldaviz/notebooks/PROTOTYPE02.ipynb
+++ b/ms2ldaviz/notebooks/PROTOTYPE02.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DISCLAIMER: Some portions of the code have been refactored from the Client's code available at https://github.com/sdrogers/ms2ldaviz. Since the project involved at least some refactoring at all stages, the author does not claim full ownership of the code. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# I. IMPORTS"
    ]
   },
@@ -737,59 +744,6 @@
    "source": [
     "# CSV export of phi comparison. \n",
     "np.savetxt(\"compare_phi_\"+str(chosen_document[0])+\".csv\", phi_compare2, delimiter=\",\", fmt=\"%s\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1040"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.getsizeof(lda_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('phi', 196880, 196880)\n",
-      "('features', 3146000, 3342880)\n",
-      "('doc_metadata', 196880, 3539760)\n",
-      "('K', 24, 3539784)\n",
-      "('word_index', 3146000, 6685784)\n",
-      "('topic_index', 49424, 6735208)\n",
-      "('doc_index', 196880, 6932088)\n",
-      "('beta', 49424, 6981512)\n",
-      "('topic_metadata', 49424, 7030936)\n",
-      "('alpha', 4272, 7035208)\n",
-      "('corpus', 196880, 7232088)\n",
-      "('overlap_scores', 196880, 7428968)\n",
-      "('theta', 196880, 7625848)\n",
-      "('gamma', 4096, 7629944)\n"
-     ]
-    }
-   ],
-   "source": [
-    "total = 0\n",
-    "for k in lda_dict.keys(): \n",
-    "    total += sys.getsizeof(lda_dict[k])\n",
-    "    print (k,sys.getsizeof(lda_dict[k]),total)"
    ]
   }
  ],
